[tool.poetry]
name = "cc-poster-scraper"
version = "0.1.0"
description = ""
authors = ["gnomeek <gnomeek@outlook.com>"]
readme = "README.md"
packages = [{include = "cc_poster_scraper"}]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

